--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Favio</title>
 </head>
 <body>
     
 </body>
+<!-- firebase CDN -->
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script> 
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>  
+
+<!-- firebase files -->
+<script src="./js/firebase-config.js"></script>
+<script src="./js/main.js"></script>
 </html>
+
