add login payment screen

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         <input type="password" id="confirm-password" name="confirm-password" required><br><br>
 
         <label for="driver">Driver:</label>
-        <input type="radio" id="driver" name="driver" value="yes" required>Yes
-        <input type="radio" id="driver" name="driver" value="no" required>No<br><br>
+        <input type="radio" id="driver-yes" name="driver" value="yes" required>Yes
+        <input type="radio" id="driver-no" name="driver" value="no" required>No<br><br>
 
         <input type="submit" value="Sign Up" >
     </form>
+
+
 </body>
 
     <!-- firebase CDN -->
