Google Maps Integrated

--- a/pages/registration/signup-payment.html
+++ b/pages/registration/signup-payment.html
@@ -41,7 +41,7 @@
 <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>  
 
 <!-- firebase files -->
-<script src="./js/firebase-config.js"></script>
+<script src="./../../js/firebase-config.js"></script>
 <script src="./js/login-payment.js"></script>
 </html>
 
