--- a/pages/registration/signup.html
+++ b/pages/registration/signup.html
@@ -49,7 +49,7 @@
 <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>  
 
 <!-- firebase files -->
-<script src="./js/firebase-config.js"></script>
+<script src="./../../js/firebase-config.js"></script>
 <script src="./js/main.js"></script>
 </html>
 
