--- a/pages/delivery_request/delivery_request_seeker.html
+++ b/pages/delivery_request/delivery_request_seeker.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script src="https://kit.fontawesome.com/ab2155e76b.js" crossorigin="anonymous"></script>
+    <link href="./../../css/style.css" rel="stylesheet" />
 </head>
 <body>
+
+    <div class="body-wrapper">
+        <div id="googleMap">
+
+        </div>
+        <div id="delivery-request-form">
+            <form>
+                <input type="text" id="from" placeholder="Origin" >
+                <input type="text" id="to" placeholder="Destination" >
+                <button onclick="calcRoute();"><i class="fas fa-map-signs"></i></button>
+            </form>
+        </div>
+    </div>
     
 </body>
+
+
+<!-- firebase CDN -->
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script> 
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>  
+
+<!-- firebase files -->
+<script src="./../../js/firebase-config.js"></script>
+ <!-- Google Maps -->
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFyOKnoicCueguKZctIMwiDDD-bZ35VMA&libraries=places"></script>
+ <script src="./../../js/delivery_request/delivery_request_seeker.js"></script>
 </html>
