Use Geolocation for origin address and convert to formatted address - Pujan Shakya

--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -56,7 +56,7 @@
 
                             <div class="form-food">
                                 <!-- <label for="username">Food Name</label> -->
-                                <input type="text" id="to" placeholder="Destination"  >
+                                <input type="text" id="to" placeholder="Destination" onchange="calcRoute();" >
                             </div>
                             <div class="form-food">
                                 <input type="button" onclick="calcRoute();" value="Find">
