fix new path and add show courier-option on ui

--- a/pages/registration/signup-payment.html
+++ b/pages/registration/signup-payment.html
@@ -42,6 +42,6 @@
 
 <!-- firebase files -->
 <script src="./../../js/firebase-config.js"></script>
-<script src="./js/login-payment.js"></script>
+<script src="../../js/registration/signup-payment.js"></script>
 </html>
 
