--- a/pages/registration/signup.html
+++ b/pages/registration/signup.html
@@ -50,6 +50,6 @@
 
 <!-- firebase files -->
 <script src="./../../js/firebase-config.js"></script>
-<script src="./js/main.js"></script>
+<script src="../../js/registration/signup.js"></script>
 </html>
 
