update courier-option screen

--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -65,70 +65,9 @@
                         </div>
                     </div>
 
-                    <div class="form-courier">
-                        <h2>
-                            Courier Options
-                        </h2>
-
-                        <div class="form-courier-options">
-                            <div class="options">
-                                <a href="#">
-                                    <div class="courier-icon">
-                                        <img src="./../../img/bike.svg" alt="">
-                                    </div>
-                                    <div class="form-option">
-                                        <h3>Transportation</h3>
-                                        <div class="courier-info">
-                                            <p>0kg - 2kg <br> 0.5 x 0.5 x 0.5 Meter</p>
-                                            <p>Cheapest and most sustainable delivery option: earn points every time you
-                                                use sustainable delivery
-                                            <p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="options">
-                                <a href="#">
-                                    <div class="courier-icon">
-                                        <img src="./../../img/bike.svg" alt="">
-                                    </div>
-                                    <div class="form-option">
-                                        <h3>Bike</h3>
-                                        <div class="courier-info">
-                                            <p>0kg - 2kg <br> 0.5 x 0.5 x 0.5 Meter</p>
-                                            <p>Cheapest and most sustainable delivery option: earn points every time you
-                                                use sustainable delivery
-                                            <p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="options">
-                                <a href="#">
-                                    <div class="courier-icon">
-                                        <img src="./../../img/bike.svg" alt="">
-                                    </div>
-                                    <div class="form-option">
-                                        <h3>Car</h3>
-                                        <div class="courier-info">
-                                            <p>0kg - 2kg <br> 0.5 x 0.5 x 0.5 Meter</p>
-                                            <p>Cheapest and most sustainable delivery option: earn points every time you
-                                                use sustainable delivery
-                                            <p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
-                            
-
-
-                        </div>
-
-
+                    <div id="courier-option">
                     </div>
+
                 </div>
 
                 <div class="button-confirmation">
@@ -142,6 +81,7 @@
                 <div id="googleMap" style="width: 100%">
                    
                 </div>
+
             </div>
     </main>
 
@@ -159,4 +99,6 @@
  <!-- Google Maps -->
  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFyOKnoicCueguKZctIMwiDDD-bZ35VMA&libraries=places"></script>
  <script src="./../../js/delivery_request_seeker/delivery_request_seeker.js"></script>
+ <script src="./../../js/delivery_request_seeker/delivery_request_courier.js"></script>
+
 </html>
