Delivery Request Save Temporary

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div>
 
                         <input type="button" value="Login" id="signin">
-                        <input type="button" value="signup" id="signup">
+                        <input type="button" value="Signup" id="signup">
 
                         <a href="#">Forgot Password</a>
 
