--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -72,8 +72,8 @@
 
                 <div class="button-confirmation">
 
-                    <button type="submit" id="submitButton-signup">
-                        Confirm Payment
+                    <button  id="submitButton-complete" onclick="saveDeliveryRequest();">
+                       Complete
                     </button>
 
                 </div>
@@ -99,6 +99,6 @@
  <!-- Google Maps -->
  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFyOKnoicCueguKZctIMwiDDD-bZ35VMA&libraries=places"></script>
  <script src="./../../js/delivery_request_seeker/delivery_request_seeker.js"></script>
- <script src="./../../js/delivery_request_seeker/delivery_request_courier.js"></script>
+ <!-- <script src="./../../js/delivery_request_seeker/delivery_request_courier.js"></script> -->
 
 </html>
