users_tests collection changes

--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -68,6 +68,13 @@
                     <div id="courier-option">
                     </div>
 
+                    <div id="delivery-info">
+                        <p> <strong>Distance:  </strong> <span id="estimatedDistance">asdd<span> </p>
+                        <p> <strong>Estimated Time: </strong> <span id="estimatedTime">asdd<span> </p>
+                        <p> <strong>Total: $</strong> <span id="estimatedTotal">15<span> </p>
+                       
+                    </div>
+
                 </div>
 
                 <div class="button-confirmation">
