add delivery_request_rider page

--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -26,12 +26,27 @@
 
     <main>
 
-        <div id="request">
+        <ul>
+            <li><a href="#request">request</a></li>
+            <li><a href="#in-progress">in progress</a></li>
+            <li><a href="#complete">complete</a></li>
+        </ul>
+
+        <div  class="page" id="request">
+            request
         </div>
 
-        <div id="googleMap" style="width: 100%">
-                   
+        <div  class="page" id="in-progress">
+            in-progress
         </div>
+
+        <div  class="page" id="complete">
+            complete
+        </div>
+
+        <!-- <div id="googleMap" style="width: 100%">
+                   
+        </div> -->
 
     </main>
 
