implemented pricing Calculation in driver_request_seeker.js

--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -25,6 +25,12 @@
     </header>
 
     <main>
+        <div class="availabilitySwitch">
+            <label class="switch">
+                <input id="Favio_availabilityCheckBox" type="checkbox">
+                <span class="slider round">Availability</span>
+              </label>
+          </div>
 
         <ul>
             <li><a href="#request">request</a></li>
@@ -47,6 +53,7 @@
         <!-- <div id="googleMap" style="width: 100%">
                    
         </div> -->
+       
 
     </main>
 
