--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/ab2155e76b.js" crossorigin="anonymous"></script>
-    <link href="./../../css/delivery_request_seeker/delivery_request_seeker.css" rel="stylesheet" />
+    <link href="./../../css/delivery_request_seeker/delivery_request_driver.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -32,12 +32,13 @@
               </label>
           </div>
 
-        <ul>
+        <ul class="change-request">
             <li><a href="#request">request</a></li>
             <li><a href="#in-progress">in progress</a></li>
             <li><a href="#complete">complete</a></li>
         </ul>
 
+        <div class="main-wrapper">
         <div  class="page" id="request">
             request
         </div>
@@ -50,10 +51,10 @@
             complete
         </div>
 
-        <!-- <div id="googleMap" style="width: 100%">
+        <div id="googleMap" style="width: 100%">
                    
-        </div> -->
-       
+        </div>
+        </div>
 
     </main>
 
