--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -32,7 +32,7 @@
               </label>
           </div>
 
-        <ul class="change-request">
+        <ul class="change-request" id="change-request">
             <li><a href="#request">request</a></li>
             <li><a href="#in-progress">in progress</a></li>
             <li><a href="#complete">complete</a></li>
