--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -16,10 +16,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Orders</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Settings</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="./../history/history.html">History</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Settings</a></li>
             </ul>
         </nav>
     </header>
