--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -29,7 +29,7 @@
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">Orders</a></li>
+                <li><a href="./../history/history.html">History</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Settings</a></li>
             </ul>
