#15 show data based on request , in progress and completed

--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -33,9 +33,9 @@
           </div>
 
         <ul class="change-request" id="change-request">
-            <li><a href="#request">request</a></li>
-            <li><a href="#in-progress">in progress</a></li>
-            <li><a href="#complete">complete</a></li>
+            <li><a href="#request" onclick="showRequests()">request</a></li>
+            <li><a href="#in-progress" onclick="showInProgress()">in progress</a></li>
+            <li><a href="#complete" onclick="showCompleted()">complete</a></li>
         </ul>
 
         <div class="main-wrapper">
@@ -43,13 +43,7 @@
             request
         </div>
 
-        <div  class="page" id="in-progress">
-            in-progress
-        </div>
-
-        <div  class="page" id="complete">
-            complete
-        </div>
+      
 
         <div id="googleMap" style="width: 100%">
                    
