--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -6,6 +6,26 @@
     <title>Home</title>
 </head>
 <body>
+
+
+    <h1>Progress Tracking</h1>
+    <form action="" id="progressTracking">
+        <input type="checkbox" id="deliveryStart" name="deliveryStart" value="deliveryStart" checked disabled>
+        <label for="deliveryStart"> Delivery Start</label><br>
+        <input type="checkbox" id="inProgress" name="inProgress" value="inProgress">
+        <label for="inProgress"> In Progress</label><br>
+        <input type="checkbox" id="deliveryComplete" name="deliveryComplete" value="deliveryComplete">
+        <label for="deliveryComplete">Delivery Complete</label><br><br>
+      </form>
     
 </body>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script> 
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>  
+
+<!-- firebase files -->
+<script src="./../../js/firebase-config.js"></script>
+ <!-- Google Maps -->
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFyOKnoicCueguKZctIMwiDDD-bZ35VMA&libraries=places"></script>
+ <script src="./../../js/delivery_request_seeker/delivery_inprogress_rider.js"></script>
 </html>
