--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -16,12 +16,17 @@
         <label for="inProgress"> In Progress</label><br>
         <input type="checkbox" id="deliveryComplete" name="deliveryComplete" value="deliveryComplete">
         <label for="deliveryComplete">Delivery Complete</label><br><br>
-      </form>
+    </form>
     
+    <div id="complete">
+    </div>
+
 </body>
 <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script> 
 <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>  
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-storage.js"></script>
+
 
 <!-- firebase files -->
 <script src="./../../js/firebase-config.js"></script>
