--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="manifest" href="app.webmanifest">
     <link rel="stylesheet" href="./css/registration/login.css">
 </head>
 <body>
