#28 Progress Tracking Set Intervals and add confirm later

--- a/pages/delivery_request_seeker/delivery_inprogress_seeker.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_seeker.html
@@ -31,7 +31,7 @@
 
                     <div class="form-destination">
                         <h2>
-                            Pick Destination
+                            Progress Tracking
                         </h2>
 
                         <div>
@@ -55,6 +55,12 @@
                     <div id="progressTracking">
                     </div>
 
+                    <div id="completedImageWrapper">
+                        <img src="" alt="Completed Image" id="completedImage" style="display: none;">
+                        <button id="confirmCompletedImage" style="display: none;">Confirm</button>
+                        <button id="cancelCompletedImage" style="display: none;">Cancel</button>
+                    </div>
+
                     <div id="feeSummary">
                         
                     </div>
@@ -67,13 +73,13 @@
 
                 </div>
 
-                <div class="button-confirmation">
+                <!-- <div class="button-confirmation">
 
                     <button  id="submitButton-complete" onclick="saveDeliveryRequest();">
                        Complete
                     </button>
 
-                </div>
+                </div> -->
 
                 <div id="googleMap" style="width: 100%">
                    
