Confirm later , confirm update in seeker

--- a/pages/delivery_request_seeker/delivery_inprogress_seeker.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_seeker.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="./../delivery_request_seeker/delivery_request_seeker.html">Home</a></li>
                 <li><a href="./../history/history.html">History</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Settings</a></li>
@@ -57,7 +57,7 @@
 
                     <div id="completedImageWrapper">
                         <img src="" alt="Completed Image" id="completedImage" style="display: none;">
-                        <button id="confirmCompletedImage" style="display: none;">Confirm</button>
+                        <button id="confirmCompletedImage" style="display: none;" onclick="confirmDeliveryImage();">Confirm</button>
                         <button id="cancelCompletedImage" style="display: none;">Cancel</button>
                     </div>
 
