--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="./../delivery_request_seeker/delivery_inprogress_rider.html">Home</a></li>
                 <li><a href="./../history/history.html">History</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Settings</a></li>
