#29 Scheduled Date and time

--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -34,6 +34,7 @@
 
         <ul class="change-request" id="change-request">
             <li><a href="#request" onclick="showRequests()">request</a></li>
+            <li><a href="#scheduled" onclick="showScheduled()">scheduled</a></li>
             <li><a href="#in-progress" onclick="showInProgress()">in progress</a></li>
             <li><a href="#complete" onclick="showCompleted()">complete</a></li>
         </ul>
