--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -83,8 +83,8 @@
                     </div>
 
                     <div class="comments">
-                        <textarea name="comments" id="comments">
-                            Hey... say something!
+                        <textarea name="comments" id="comments" placeholder="Notes">
+                            
                         </textarea>
                     </div>
 
