"fixed pricing calculation and added about settings profile html pages"

--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="./../history/history.html">History</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="../about_us/about_us.html">About Us</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
         </nav>
