--- a/pages/delivery_request_seeker/delivery_inprogress_seeker.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_seeker.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="./../delivery_request_seeker/delivery_request_seeker.html">Home</a></li>
                 <li><a href="./../history/history.html">History</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="../about_us/about_us.html">About Us</a></li>
                 <li><a href="">Settings</a></li>
             </ul>
         </nav>
