--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a onclick="goHome()">Home</a></li>
                 <li><a href="./history.html">History</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="../about_us/about_us.html">About Us</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
         </nav>
