#32 favio fixed bug of availability button  and added html and css for different pages

--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -4,30 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/settings/aboutUs.css">
     <title>About US</title>
 </head>
 
 <body>
     <header>
-        <div>
-            <h1>FAVIO</h1>
+        <div class="favio_aboutUs_header">
+            <img src="./../../img/Favio.png" alt="Favio">
             <p>Your On Demand Local Courier</p>
         </div>
     </header>
     <main>
-        <div>
-            <h2>ABOUT US</h2>
-            <div class="favio_aboutUs_image">
+        <div class="favio_AboutUsArrow">
+            <!-- add icon and add css here -->
+            <span>back</span>
 
-            </div>
-            <div class="favio_aboutUs_text">
-                <p>Favio can change the way you move things, it let’s you access the city like never before. We’re an
-                    app that connects you to the nearest delivery partner who can pick up items, make purchases from any
-                    store or restaurants in the city and bring them to you in the most sustainable way.
-                    It’s never easy to drop off packages or make purchases when you get busy with work, get stuck in
-                    traffic, or you might even end up forgetting about it completely.
-                    All you need to do is, Tell us where to go, what needs to be done and when. While you can Sit back,
-                    and let us worry about your task-at-hand.</p>
+        </div>
+        <div class="favio_aboutUsMainDiv">
+
+            <h2>ABOUT US</h2>
+
+            <div class="favio_AboutUsGrid">
+                <div class="favio_aboutUs_image">
+                </div>
+                <div class="favio_aboutUs_text">
+                    <p>Favio can change the way you move things, it let’s you access the city like never before. We’re
+                        an
+                        app that connects you to the nearest delivery partner who can pick up items, make purchases from
+                        any
+                        store or restaurants in the city and bring them to you in the most sustainable way.</p>
+
+                    <p>It’s never easy to drop off packages or make purchases when you get busy with work, get stuck in
+                        traffic, or you might even end up forgetting about it completely.
+                    </p>
+                    <p>All you need to do is, Tell us where to go, what needs to be done and when. While you can Sit
+                        back,
+                        and let us worry about your task-at-hand.</p>
+                </div>
             </div>
         </div>
     </main>
