--- a/pages/sample.html
+++ b/pages/sample.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./../css/normalize.css">
     <link rel="stylesheet" href="./../css/style.css">
     <link rel="stylesheet" href="./../css/header.css">
-    <link rel="stylesheet" href="./../css/grid.css">
+    <link rel="stylesheet" href="./../css/header.css">
 </head>
 <body>
 
@@ -16,4 +16,4 @@
 
     
 </body>
-</html>
+</html> -->
