Styled Dropoff and and Datetime. Try to relayout cards for courier options

--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -117,13 +117,12 @@
 
                     <div class="delivery-datetime">
                         <label for="schedule">Schedule (date and time):</label><br>
-                        <input type="datetime-local" id="scheduled_delivery_datetime" name="schedule" required>
+                        <input type="datetime-local" class="datetime" id="scheduled_delivery_datetime" name="schedule" required>     
                     </div>
 
                     <div class="drop-off">
-
                         <label for="dropoff_option">Drop-off option:</label>
-                        <select id="dropoff_option" name="dropoff_option">
+                        <select class="drop-off-box" id="dropoff_option" name="dropoff_option">
                             <option value="front_door">Front Door</option>
                             <option value="receiver">Pickup</option>
                         </select>
