--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -130,6 +130,7 @@
                     </div>
 
                     <div class="comments">
+                        <label for="comments">Notes</label>
                         <textarea name="comments" id="comments" placeholder="Notes">
                             
                         </textarea>
