rearrage option order for css styling

--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/ab2155e76b.js" crossorigin="anonymous"></script>
+    <link rel="manifest" href="../../app.webmanifest">
     <link href="./../../css/delivery_request_seeker/delivery_inprogress_rider.css" rel="stylesheet" />
 </head>
 <body>
