--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -6,6 +6,8 @@
     <title>Home</title>
     <script src="https://kit.fontawesome.com/ab2155e76b.js" crossorigin="anonymous"></script>
 
+    <link rel="manifest" href="../../app.webmanifest">
+
     <link rel="stylesheet" href="./../../css/normalize.css">
 
     <link rel="stylesheet" href="./../../css/style.css">
@@ -111,8 +113,6 @@
                     </div>
 
                     <div id="courier-option">
-                        <h4>
-                        </h4>
                     </div>
 
                     <div class="delivery-datetime">
