--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./../../css/delivery_request_seeker/delivery_inprogress_rider.css" rel="stylesheet" />
+    <link rel="manifest" href="../../app.webmanifest">
 
     <title>Settings</title>
     <link rel="stylesheet" href="../../css/settings/settings.css">
