--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="manifest" href="app.webmanifest">
+    <link rel="manifest" href="./app.webmanifest">
 
     <link rel="stylesheet" href="./../../css/normalize.css">
 
@@ -13,7 +13,6 @@
 
     <link rel="stylesheet" href="./css/registration/login.css">
 </head>
-
 <body>
 
     <div class="wrapper">
