--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History</title>
     <script src="https://kit.fontawesome.com/ab2155e76b.js" crossorigin="anonymous"></script>
+    <link rel="manifest" href="../../app.webmanifest">
     
     <link rel="stylesheet" href="./../../css/normalize.css">
 
