--- a/pages/settings/support.html
+++ b/pages/settings/support.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>support</title>
+    <link rel="manifest" href="../../app.webmanifest">
     
     <link rel="stylesheet" href="./../../css/normalize.css">
 
