Change courier options headings to h4

--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -116,12 +116,12 @@
                     </div>
 
                     <div class="delivery-datetime">
-                        <label for="schedule">Schedule (date and time):</label><br>
+                        <label for="schedule"><h4>Schedule (date and time):</h4></label><br>
                         <input type="datetime-local" class="datetime" id="scheduled_delivery_datetime" name="schedule" required>     
                     </div>
 
                     <div class="drop-off">
-                        <label for="dropoff_option">Drop-off option:</label>
+                        <label for="dropoff_option"><h4>Drop-off option:</h4></label>
                         <select class="drop-off-box" id="dropoff_option" name="dropoff_option">
                             <option value="front_door">Front Door</option>
                             <option value="receiver">Pickup</option>
