Styled homepage for rider

--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -75,21 +75,21 @@
     </nav>
 
     <main>
+
+        <div class="availability-switch-position">
+            <p>Availability</p>
+            <div class="availabilitySwitch">
+                <input id="Favio_availabilityCheckBox" type="checkbox" checked>
+                <label for="Favio_availabilityCheckBox">
+                    <span></span>
+                </label>
+            </div>
+        </div>
+
         <div class="content-grid">
 
-            <!-- <div class="switch">
-                <input type="checkbox" id="c1" checked>
-                <label for="c1"><span></span></label>
-            </div> -->
 
             <div class="main-content">
-                <div class="availabilitySwitch">
-                    <label class="switch">
-                        <input id="Favio_availabilityCheckBox" type="checkbox">
-                        <span class="slider round">Availability</span>
-                    </label>
-                </div>
-
                 
                 <ul class="change-request" id="change-request">
                     <li><a href="#request" onclick="showRequests()">request</a></li>
