--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -90,12 +90,14 @@
 
 
             <div class="main-content">
-                
+                <h4>
+                    Todays Schedule
+                </h4>
                 <ul class="change-request" id="change-request">
-                    <li><a href="#request" onclick="showRequests()">request</a></li>
-                    <li><a href="#scheduled" onclick="showScheduled()">scheduled</a></li>
-                    <li><a href="#in-progress" onclick="showInProgress()">in progress</a></li>
-                    <li><a href="#complete" onclick="showCompleted()">complete</a></li>
+                    <li><a href="#request" onclick="showRequests()">Request</a></li>
+                    <li><a href="#scheduled" onclick="showScheduled()">Scheduled</a></li>
+                    <li><a href="#in-progress" onclick="showInProgress()">In progress</a></li>
+                    <li><a href="#complete" onclick="showCompleted()">Completed</a></li>
                 </ul>
                 <div class="main-wrapper">
                     <div class="page" id="request">
@@ -111,6 +113,25 @@
         </div>
 
     </main>
+
+    <!-- <div class="request-div">
+        <div class="request-div-left">
+            <img src="./../../img/bike.svg" style="width: 200px; max-height: 30px;">
+            <p>Philippe Gabriel Hernandez</p>
+            <p>20 July 2023</p>
+            <p>12:45 AM</p>
+        </div>
+        <div class="request-div-center">
+            <p>4730 Lougheed Hwy., Burnaby, BC V5C 0M9, Canada</p>
+            <p>Langara Golf Course, Alberta Street, Vancouver, BC, Canada</p>
+            <p>28 mins</p>
+            <p>13.5 km</p>
+        </div>
+        <div class="request-div-right" data-value="0">
+            <button class="request-button">Requests</button>
+            <p class="request-fee">$ 19.55 CAD</p>
+        </div>
+    </div> -->
 
 
 </body>
